6.0.7 (not yet released):
- Update ODA to 1.4.15.
- Update PackMan to 3.2.0.
- Update Selector to 1.2.6.
- Update SystemInstaller to 2.4.11.
- [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
file when a failure occurs during the image creation.
- [Ticket #525] Improve the management of /etc/hosts on the headnode.
- [Ticket #597] Bootstrapping now updates OPKGs data rather than duplicating
the data for all OPKGs.
- Fix the definition of base prereqs for Debian-based systems.

6.0.6:
- Update ODA to 1.4.14.
- Update OPKG OpenMPI to 1.3.0.
- Update RAPT to 2.8.8.
- [Ticket #549] Create the .master script for SystemImager for images created
using the CLI.
- [Ticket #583] Remove hosts from SSH known_hosts when deleting clients.
- [Ticket #586] Fix problem when using ssh -v to connect to clients.
- [Ticket #591] Add a dependency to syslinux to the oscar-base-scripts RPM. 
- Fix issues when detecting the OSCAR version.
- Add the support of ubuntu-1004-x86_64.

6.0.5:
- Update Configurator to 1.0.5.
- Update OPKG C3 to 4.1.4.
- Update OPKG Ganglia to 3.0.10.
- Update OPKG JobMonarch to 0.1.4.
- Update OPKG mta-config to 1.1.1.
- Update OPKG Netbootmgr to 1.7.3.
- Update OPKG pfilter to 1.707.1.
- Update OPKG SGE to 6.1.5.
- Update OPKG SIS to 4.0.6.
- Update OPKG Switcher to 1.0.12.
- Update ODA to 1.4.12.
- Update ORM to 1.4.2.
- Update PackMan to 3.1.12.
- Update RAPT to 2.8.7.
- Update Selector to 1.2.5.
- Update sync_files to 2.5.7.
- Update SystemInstaller to 2.4.10.
- Update Yume to 2.8.11.
- [Ticket #326] Remove the documentation OPKG since the documentation is
managed via the Trac wiki and the PDFs included into the OSCAR binary
packages.
- [Ticket #405] When post image creation scripts fail, the image is deleted.
- [Ticket #520] Ganglia configuration scripts do not generate any error
anymore.
- [Ticket #531] Fix various configuration issues for Ganglia.
- [Ticket #542] Include the documentation into the OSCAR binary packages.